# rpath_dangers

./: CMakeLists.txt  LICENSE  README.md  SConstruct
src/: CMakeLists.txt  SConscript
src/bins/: CMakeLists.txt  SConscript  top.cpp  top2.cpp
src/libs/: CMakeLists.txt  SConscript  mylib_level1.cpp  mylib_level1.hpp  mylib_level2.cpp  mylib_level2_v1.cpp  mylib_level2_v1.hpp
src/tests/: show_ld_loading.sh
